// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualizationToggleTest render with a specified label 1`] = `
<DocumentFragment>
  <div
    class="ms-Toggle is-disabled my test class root-109"
  >
    <label
      class="ms-Label ms-Toggle-label label-116"
      for="Toggle1"
      id="Toggle1-label"
    >
      test-label
    </label>
    <div
      class="ms-Toggle-innerContainer container-111"
    >
      <button
        aria-checked="false"
        aria-disabled="true"
        aria-label="test-label"
        class="ms-Toggle-background pill-112"
        data-automation-id="test-automation-id"
        data-is-focusable="true"
        data-ktp-target="true"
        disabled=""
        id="Toggle1"
        role="switch"
        type="button"
      >
        <span
          class="ms-Toggle-thumb thumb-113"
        />
      </button>
      <label
        class="ms-Label ms-Toggle-stateText text-115"
        for="Toggle1"
        id="Toggle1-stateText"
      >
        Off
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VisualizationToggleTest render with no label 1`] = `
<DocumentFragment>
  <div
    class="ms-Toggle is-disabled my test class root-109"
  >
    <div
      class="ms-Toggle-innerContainer container-111"
    >
      <button
        aria-checked="false"
        aria-disabled="true"
        aria-label="visualizationName"
        class="ms-Toggle-background pill-112"
        data-automation-id="test-automation-id"
        data-is-focusable="true"
        data-ktp-target="true"
        disabled=""
        id="Toggle0"
        role="switch"
        type="button"
      >
        <span
          class="ms-Toggle-thumb thumb-113"
        />
      </button>
      <label
        class="ms-Label ms-Toggle-stateText text-115"
        for="Toggle0"
        id="Toggle0-stateText"
      >
        Off
      </label>
    </div>
  </div>
</DocumentFragment>
`;
